src/objects/RCM1_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This will host rcm1 endpoint settings.</description>
    <fields>
        <fullName>Activities_Import_Date__c</fullName>
        <label>Activities Import Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Api_Key__c</fullName>
        <description>Api Key from RCM1</description>
        <inlineHelpText>The api key provided by RCM1</inlineHelpText>
        <label>Api_Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTest__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Target the test api url for rcm1</description>
        <inlineHelpText>Use this to specify whether to target the test or production data for rcm1.</inlineHelpText>
        <label>isTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scheduler_id__c</fullName>
        <description>Scheduled job id for import. This is used for turning the job off.</description>
        <inlineHelpText>Scheduled job id for import</inlineHelpText>
        <label>scheduler_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RCM1_Settings</label>
</CustomObject>